--- a/css/text.scss
+++ b/css/text.scss
@@ -3,10 +3,10 @@
 
 @import 'variables.scss';
 
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,500,500i,600,700,800&display=swap');
+
 h1, h2, h3, h4, h5, h6 {
 	display: block;
-	margin: 0;
-	margin-bottom: 5px;
 }
 
 h1, h2, h3, h4 {
@@ -18,15 +18,32 @@ p {
 }
 
 h1 {
-	font-size: 3em;
+	font-size: 4em;
 }
 
 h2 {
-	font-size: 2em;
+	font-size: 2.8em;
 }
 
 h3 {
+	font-size: 2.5em;
+}
+
+h3 {
+	font-size: 2em;
+}
+
+h4 {
 	font-size: 1.5em;
+}
+
+h5 {
+	font-size: 1.2em;
+}
+
+h6 {
+	font-size: 1em;
+	font-weight: 500;
 }
 
 a {
